@@ -1,3 +1,4 @@
+- STREL-175 restore somatic callability tract
 - STREL-155 determine indel candidacy in active regions
 - STREL-75 fix sample limit in pedicure
 - STREL-118 relax MMDF using short haplotyping
